--- a/frontend/src/components/style.css
+++ b/frontend/src/components/style.css
@@ -1,3 +1,20 @@
 body {
     font-family: 'Sans-Serif';
 }
+
+div#app ul {
+    display: inline-block;
+    list-style-type: none;
+    margin: 10px 0px;
+    width: 100%;
+    padding: 0px 30px;
+}
+
+div#app li {
+    float: left;
+    margin: 10px;
+}
+
+div#app li.logout,  div#app li.login{
+    float: right
+}
